Fix templates being visible on old browsers

--- a/ui/static/css/common.css
+++ b/ui/static/css/common.css
@@ -640,6 +640,10 @@ a.button {
 }
 
 /* Modals */
+template {
+    display: none;
+}
+
 .modal {
     position: fixed;
     top: 0;
